[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
crossterm = "0.28.1"
float-ord = "0.3.2"
futures = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = {version = "1.0.214", features = ["derive"]}
serde-this-or-that = { version = "0.4.2", features = ["derive"] }
serde_json = "1.0.132"
stderrlog = "0.6.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
